docs: update introduction with detailed library features
Enhanced the introduction to include a comprehensive overview of React Refocus library features, installation instructions, and contribution guidelines. This update aims to provide a clearer understanding of the library's capabilities and how to get started.

--- a/docs/docs/introduction.mdx
+++ b/docs/docs/introduction.mdx
@@ -1,6 +1,75 @@
 ---
 id: introduction
 title: Introduction
+description: 'React Refocus is a robust focus management library for React, enabling seamless focus trapping, keyboard navigation, and accessibility improvements.'
+keywords:
+  - react-refocus
+  - react refocus
+  - react focus
+  - focus trapping
+  - react focus trapping
+  - accessibility hooks
+  - react keyboard navigation
+  - react focus order
+  - react focus return
+  - manage focus react
+  - react accessibility
+  - npm react-refocus
+  - install react-refocus
+  - yarn react-refocus
 ---
 
+import StructuredData from '@site/src/components/StructuredData';
+
+<StructuredData />
+
 # Introduction
+
+React Refocus is a powerful focus management library built to enhance accessibility and user experience in React applications. Designed to manage focus states dynamically, React Refocus simplifies handling keyboard navigation, focus trapping, and restoring focus, making it an essential tool for developing accessible and user-friendly interfaces.
+
+### Key Features
+
+- 🔒 **Focus Trapping**: Ensure focus remains within a specified component, enhancing interactions for modals, dialogs, and overlays.
+- 🔄 **Focus Restoration**: Automatically return focus to a previously focused element after actions like closing a modal or a dialog.
+- 🧭 **Focus Order Management**: Dynamically manage and adjust the tab order of elements in the UI layout.
+- ⌨️ **Keyboard Navigation**: Improve keyboard navigation within complex UI components like menus, dropdowns, and lists.
+- 🎨 **Custom Focus Indicators**: Easily customize focus indicators with various styles and animations to match your design.
+- 👁️ **Focus Visibility**: Differentiate between keyboard and mouse focus using the :focus-visible state.
+- ⚡️ **Auto Focus**: Automatically set focus on any element when components mount.
+- 📢 **Screen Reader Announcements**: Improve accessibility by announcing focus changes to screen readers.
+- ✅ **No Dependencies**: Designed to be lean and efficient without any external dependencies.
+- 📦 **Small Size**: 5 KB gzipped
+
+### Installation
+
+To install React Refocus, you can use npm or yarn:
+
+```bash
+npm install react-refocus
+```
+or
+```bash
+yarn add react-refocus
+```
+
+### Contributing
+
+We welcome contributions to React Refocus! If you have suggestions for new features or have found a bug, please open an issue or submit a pull request on our [GitHub Repository](https://github.com/mallikcheripally/react-refocus). For more details, check out our [contributing guide](https://github.com/mallikcheripally/react-refocus/CONTRIBUTING.md).
+
+### License
+
+React Refocus is licensed under the [MIT License](https://github.com/mallikcheripally/react-refocus/LICENSE).
+
+### Getting Started
+
+To get started with React Refocus, follow the installation and quick-start guides in the [Getting Started](getting-started/installation) section.
+
+### Staying Informed
+
+Stay updated with the latest developments and releases of the React Refocus library:
+
+- ⭐ **GitHub Repository**: [React Refocus on GitHub](https://github.com/mallikcheripally/react-refocus)
+
+### Something Missing?
+
+If you find any issues or have suggestions for improvements, feel free to contribute or open an issue on our [GitHub Repository](https://github.com/mallikcheripally/react-refocus). We welcome contributions from the community to make React Refocus better.
